--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==4.1.4
 python-decouple==3.6
 djangorestframework==3.14.0
 Pillow==9.3.0
+pyotp==2.8.0
 djangorestframework-simplejwt==5.2.2
 PyJWT==2.6.0
 
